--- a/[Important_Concepts]_My_ver__00_tensorflow_basics.ipynb
+++ b/[Important_Concepts]_My_ver__00_tensorflow_basics.ipynb
@@ -6,7 +6,10 @@
       "name": "[Important Concepts] My_ver_ 00_tensorflow_basics.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "fzjcZ4FHCOb5"
+        "fzjcZ4FHCOb5",
+        "-E-I1jFC84Qi",
+        "urq3bx3l_Y4K",
+        "HcCZxK61VIv0"
       ],
       "include_colab_link": true
     },
@@ -59,7 +62,9 @@
         "Things to note:\n",
         "* Many of the conventions here will happen automatically behind the scenes (when you build a model) but it's worth knowing so if you see any of these things, you know what's happening.\n",
         "* For any TensorFlow function you see, it's important to be able to check it out in the documentation, for example, going to the Python API docs for all functions and searching for what you need: https://www.tensorflow.org/api_docs/python/ (don't worry if this seems overwhelming at first, with enough practice, you'll get used to navigating the documentaiton).\n",
-        "\n"
+        "\n",
+        "   \n",
+        "> Search for '[Important]' to get to important points.\n"
       ]
     },
     {
@@ -2385,28 +2390,28 @@
       "metadata": {
         "id": "kdhV1rgcNpUP",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 201
         },
-        "outputId": "854b9d10-7544-488c-f5e9-0233c2cb799a"
+        "outputId": "c96f4880-aa58-47bc-c9d8-b98c6d72b8ef"
       },
       "source": [
-        "# Change from float32 to float16 (reduced precision)\n",
+        "# Change from float32 to float16 (reduced precision) [Important][`tf.cast()`]\n",
         "B = tf.cast(B, dtype=tf.float16)\n",
         "B"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tf.Tensor: shape=(2,), dtype=float16, numpy=array([1.7, 7.4], dtype=float16)>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 106
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-4b781572ddc2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Change from float32 to float16 (reduced precision) [Important][`tf.cast()`]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mB\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcast\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mB\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat16\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mB\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+          ]
         }
       ]
     },
@@ -3020,9 +3025,10 @@
       "metadata": {
         "id": "FlRkMjL-646U",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 201
         },
-        "outputId": "6a4794a6-a6b7-44c7-c99c-a7a975cdfcb3"
+        "outputId": "ba055b1b-1112-43a3-e829-0ee17ae5aa6f"
       },
       "source": [
         "# Create a list of indices\n",
@@ -3031,23 +3037,18 @@
         "# One hot encode them\n",
         "tf.one_hot(some_list, depth=4)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tf.Tensor: shape=(4, 4), dtype=float32, numpy=\n",
-              "array([[1., 0., 0., 0.],\n",
-              "       [0., 1., 0., 0.],\n",
-              "       [0., 0., 1., 0.],\n",
-              "       [0., 0., 0., 1.]], dtype=float32)>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 121
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-a1e5306076db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# One hot encode them\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mone_hot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msome_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdepth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+          ]
         }
       ]
     },
@@ -3119,7 +3120,7 @@
         "outputId": "7056dbec-f056-4795-946a-f06bf51e8a8c"
       },
       "source": [
-        "# Create a new tensor\n",
+        "# Create a new tensor [`tf.range`][Important]\n",
         "H = tf.constant(np.arange(1, 10))\n",
         "H"
       ],
@@ -3608,7 +3609,7 @@
         "id": "_ytLPBWF1wxt"
       },
       "source": [
-        "## Using `@tf.function`\n",
+        "## Using `@tf.function`  [Important]\n",
         "\n",
         "In your TensorFlow adventures, you might come across Python functions which have the decorator [`@tf.function`](https://www.tensorflow.org/api_docs/python/tf/function).\n",
         "\n",
@@ -3628,30 +3629,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "15264197-4f9a-4e81-9f93-0f71e9296395"
+        "outputId": "9806613a-c7c1-485d-e9c0-61d34c30dd4d"
       },
       "source": [
         "# Create a simple function\n",
+        "%%time\n",
         "def function(x, y):\n",
         "  return x ** 2 + y\n",
         "\n",
-        "x = tf.constant(np.arange(0, 10))\n",
-        "y = tf.constant(np.arange(10, 20))\n",
+        "x = tf.constant(np.arange(0, 10000000))\n",
+        "y = tf.constant(np.arange(10, 10000010))\n",
         "function(x, y)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tf.Tensor: shape=(10,), dtype=int64, numpy=array([ 10,  12,  16,  22,  30,  40,  52,  66,  82, 100])>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 138
+          "output_type": "stream",
+          "text": [
+            "CPU times: user 54.3 ms, sys: 1.77 ms, total: 56.1 ms\n",
+            "Wall time: 55.8 ms\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -3662,29 +3660,32 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "264af72c-e250-440b-cb21-aeafb1862c43"
+        "outputId": "2cdd32d7-2098-46b4-e103-0c08f8b261b5"
       },
       "source": [
         "# Create the same function and decorate it with tf.function\n",
+        "\n",
         "@tf.function\n",
         "def tf_function(x, y):\n",
         "  return x ** 2 + y\n",
         "\n",
         "tf_function(x, y)"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tf.Tensor: shape=(10,), dtype=int64, numpy=array([ 10,  12,  16,  22,  30,  40,  52,  66,  82, 100])>"
+              "<tf.Tensor: shape=(10000000,), dtype=int64, numpy=\n",
+              "array([            10,             12,             16, ...,\n",
+              "       99999950000016, 99999970000012, 99999990000010])>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 139
+          "execution_count": 18
         }
       ]
     },
@@ -3785,7 +3786,8 @@
         "\n",
         "`[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]`\n",
         "\n",
-        "You can also find information about your GPU using `!nvidia-smi`."
+        "You can also find information about your GPU using `!nvidia-smi`.  \n",
+        "[Important]"
       ]
     },
     {
@@ -3795,27 +3797,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c649bb50-a9e1-49c7-cb12-3579b9b01600"
+        "outputId": "131aa928-3924-464f-84e5-7167b6df328c"
       },
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Thu Nov 26 00:41:59 2020       \n",
+            "Thu Apr 29 17:25:51 2021       \n",
             "+-----------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 455.38       Driver Version: 418.67       CUDA Version: 10.1     |\n",
+            "| NVIDIA-SMI 465.19.01    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
             "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
             "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
-            "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   75C    P0    33W /  70W |    229MiB / 15079MiB |      0%      Default |\n",
-            "|                               |                      |                 ERR! |\n",
+            "|   0  Tesla P100-PCIE...  Off  | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   36C    P0    33W / 250W |   4445MiB / 16280MiB |      0%      Default |\n",
+            "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
             "+-----------------------------------------------------------------------------+\n",
@@ -3823,7 +3825,6 @@
             "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
             "|        ID   ID                                                   Usage      |\n",
             "|=============================================================================|\n",
-            "|  No running processes found                                                 |\n",
             "+-----------------------------------------------------------------------------+\n"
           ],
           "name": "stdout"
@@ -3874,6 +3875,274 @@
         "  * Are there any functions we used in here that match what's used in there? Which are the same? Which haven't you seen before?\n",
         "* Watch the video [\"What's a tensor?\"](https://www.youtube.com/watch?v=f5liqUk0ZTw) - a great visual introduction to many of the concepts we've covered in this notebook."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xAs0RGWtstet"
+      },
+      "source": [
+        "## Practice"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZT-BbfRHuH0c"
+      },
+      "source": [
+        "1. Create a vector, scalar, matrix and tensor with values of your choosing using `tf.constant()`.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cM5oOLDSs1Vr"
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "import numpy as np"
+      ],
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pzDhm2Etsw_h",
+        "outputId": "63c1f67e-8f30-4abc-f0d9-b6b356425bee"
+      },
+      "source": [
+        "scalar = tf.constant(5)\n",
+        "scalar"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=int32, numpy=5>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N25GpxeGs6wp",
+        "outputId": "e02e2450-08c1-40f0-e432-2ce834173e6c"
+      },
+      "source": [
+        "vector = tf.constant([4,5,6,7])\n",
+        "vector"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(4,), dtype=int32, numpy=array([4, 5, 6, 7], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M9ZIWDOzs_vm",
+        "outputId": "85e21957-13aa-4555-f8da-ac6ffcc7a1ae"
+      },
+      "source": [
+        "matrix = tf.constant([[1,2],\n",
+        "                     [3,4]])\n",
+        "matrix"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "array([[1, 2],\n",
+              "       [3, 4]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GxYMV7DhtfxD",
+        "outputId": "faa7e524-2066-47e3-c766-56f1d02d748e"
+      },
+      "source": [
+        "tensor = tf.constant([[[[1,2],[3,4]],\n",
+        "                       [[2,3],[4,5]]],\n",
+        "                      [[[1,5], [2,6]],\n",
+        "                       [[3,7],[4,8]]]])\n",
+        "tensor"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 2, 2, 2), dtype=int32, numpy=\n",
+              "array([[[[1, 2],\n",
+              "         [3, 4]],\n",
+              "\n",
+              "        [[2, 3],\n",
+              "         [4, 5]]],\n",
+              "\n",
+              "\n",
+              "       [[[1, 5],\n",
+              "         [2, 6]],\n",
+              "\n",
+              "        [[3, 7],\n",
+              "         [4, 8]]]], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JIlWp-_ftzgk"
+      },
+      "source": [
+        "2. Find the shape, rank and size of the tensors you created in 1.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qrXRtIkDuK9_",
+        "outputId": "587f7f8b-179a-420f-fc57-5a31df58c618"
+      },
+      "source": [
+        "tensor.shape"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TensorShape([2, 2, 2, 2])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XddY5DNvuMUn",
+        "outputId": "b7b215a6-ba76-44f8-ee8d-5436052e1755"
+      },
+      "source": [
+        "tensor.ndim"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 166
+        },
+        "id": "0rndHiN5uNcE",
+        "outputId": "f0c8ab92-fe85-4cf5-f155-9a8316b94242"
+      },
+      "source": [
+        "tensor.size"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-32-c278b1e1ddaf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtensor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'tensorflow.python.framework.ops.EagerTensor' object has no attribute 'size'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VD5ooYifuO64"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
