--- a/[Important_Concepts]_My_ver__00_tensorflow_basics.ipynb
+++ b/[Important_Concepts]_My_ver__00_tensorflow_basics.ipynb
@@ -4422,7 +4422,7 @@
         "id": "SALOOssigRFy"
       },
       "source": [
-        "8. Created a tensor with random values of shape `[1, 224, 224, 3]` then squeeze it to change the shape to `[224, 224, 3]`.\n"
+        "8) Created a tensor with random values of shape `[1, 224, 224, 3]` then squeeze it to change the shape to `[224, 224, 3]`.\n"
       ]
     },
     {
@@ -4489,7 +4489,7 @@
         "id": "EdjurWEyh7zU"
       },
       "source": [
-        "9. Create a tensor with shape `[10]` using your own choice of values, then find the index which has the maximum value.\n"
+        "9.   Create a tensor with shape `[10]` using your own choice of values, then find the index which has the maximum value.\n"
       ]
     },
     {
@@ -4584,7 +4584,7 @@
         "id": "U77l9pPjh3jU"
       },
       "source": [
-        "10. One-hot encode the tensor you created in 9."
+        "10.   One-hot encode the tensor you created in 9."
       ]
     },
     {
