--- a/[Notes] 01_neural_network_regression_in_tensorflow.ipynb
+++ b/[Notes] 01_neural_network_regression_in_tensorflow.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "[Notes]01_neural_network_regression_in_tensorflow.ipynb",
+      "name": "[Notes] 01_neural_network_regression_in_tensorflow.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Shubhranshu-Malhotra/Tensorflow-Developer-ZTM/blob/main/%5BNotes%5D01_neural_network_regression_in_tensorflow.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Shubhranshu-Malhotra/Tensorflow-Developer-ZTM/blob/main/%5BNotes%5D%2001_neural_network_regression_in_tensorflow.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -3332,7 +3332,8 @@
         "# Import required libraries\n",
         "import tensorflow as tf\n",
         "import pandas as pd\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.model_selection import train_test_split"
       ],
       "execution_count": null,
       "outputs": []
@@ -3343,7 +3344,7 @@
         "id": "JrnTr5N9blFo"
       },
       "source": [
-        "# Read in the insurance dataset\n",
+        "# Read in the insurance dataset directly from GitHub [Important]\n",
         "insurance = pd.read_csv(\"https://raw.githubusercontent.com/stedy/Machine-Learning-with-R-datasets/master/insurance.csv\")"
       ],
       "execution_count": null,
@@ -4389,7 +4390,7 @@
         "id": "HS8xYkvIuVZZ"
       },
       "source": [
-        "## Preprocessing data (normalization and standardization)\n",
+        "## Preprocessing data (normalization and standardization) [Important]\n",
         "\n",
         "A common practice when working with neural networks is to make sure all of the data you pass to them is in the range 0 to 1.\n",
         "\n",
