transfer to colab id

--- a/[Notes]_02_neural_network_classification_in_tensorflow.ipynb
+++ b/[Notes]_02_neural_network_classification_in_tensorflow.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "[Notes] 02_neural_network_classification_in_tensorflow.ipynb",
+      "name": "[Notes]_02_neural_network_classification_in_tensorflow.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -132,7 +133,7 @@
         "import tensorflow as tf\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +178,7 @@
         "                    noise=0.03, \n",
         "                    random_state=42)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -202,7 +203,7 @@
         "# Check out the features\n",
         "X"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -237,7 +238,7 @@
         "# See the first 10 labels\n",
         "y[:10]"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,7 +283,7 @@
         "circles = pd.DataFrame({\"X0\":X[:, 0], \"X1\":X[:, 1], \"label\":y})\n",
         "circles.head()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -384,7 +385,7 @@
         "# Check out the different labels\n",
         "circles.label.value_counts()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -430,7 +431,7 @@
         "import matplotlib.pyplot as plt\n",
         "plt.scatter(X[:, 0], X[:, 1], c=y, cmap=plt.cm.RdYlBu);"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -490,7 +491,7 @@
         "# Check the shapes of our features and labels\n",
         "X.shape, y.shape"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -528,7 +529,7 @@
         "# Check how many samples we have\n",
         "len(X), len(y)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -568,7 +569,7 @@
         "# View the first example of features and labels\n",
         "X[0], y[0]"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -642,7 +643,7 @@
         "# 3. Fit the model\n",
         "model_1.fit(X, y, epochs=5)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -697,7 +698,7 @@
         "model_1.fit(X, y, epochs=200, verbose=0) # set verbose=0 to remove training updates\n",
         "model_1.evaluate(X, y)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -758,7 +759,7 @@
         "# 3. Fit the model\n",
         "model_2.fit(X, y, epochs=100, verbose=0) # set verbose=0 to make the output print less"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -787,7 +788,7 @@
         "# Evaluate the model\n",
         "model_2.evaluate(X, y)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -868,7 +869,7 @@
         "# 3. Fit the model\n",
         "model_3.fit(X, y, epochs=100, verbose=0) # fit for 100 passes of the data"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -960,7 +961,7 @@
         "  plt.xlim(xx.min(), xx.max())\n",
         "  plt.ylim(yy.min(), yy.max())"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -986,7 +987,7 @@
         "# Check out the predictions our model is making \n",
         "plot_decision_boundary(model_3, X, y)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1052,7 +1053,7 @@
         "# Fit our model to the data\n",
         "model_3.fit(X_reg_train, y_reg_train, epochs=100)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1123,7 +1124,7 @@
         "# Fit the recompiled model\n",
         "model_3.fit(X_reg_train, y_reg_train, epochs=100)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1375,7 +1376,7 @@
         "plt.scatter(X_reg_test, y_reg_preds.squeeze(), c='r', label='Predictions')\n",
         "plt.legend();"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1461,7 +1462,7 @@
         "# Fit the model\n",
         "history = model_4.fit(X, y, epochs=100)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1696,7 +1697,7 @@
         "# Check out our data\n",
         "plt.scatter(X[:, 0], X[:, 1], c=y, cmap=plt.cm.RdYlBu);"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1736,7 +1737,7 @@
         "# Check the deicison boundary (blue is blue class, yellow is the crossover, red is red class)\n",
         "plot_decision_boundary(model_4, X, y)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1802,7 +1803,7 @@
         "# Fit the model\n",
         "history = model_5.fit(X, y, epochs=100)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2060,7 +2061,7 @@
         "# Fit the model\n",
         "history = model_6.fit(X, y, epochs=100)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2283,7 +2284,7 @@
         "# Evaluate the model\n",
         "model_6.evaluate(X, y)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2331,7 +2332,7 @@
         "# Check out the predictions using 2 hidden layers\n",
         "plot_decision_boundary(model_6, X, y)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2398,7 +2399,7 @@
         "# Fit the model\n",
         "history = model_7.fit(X, y, epochs=100, verbose=0)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2414,7 +2415,7 @@
         "# Evaluate our model\n",
         "model_7.evaluate(X, y)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2460,7 +2461,7 @@
         "# View the predictions of the model with relu and sigmoid activations\n",
         "plot_decision_boundary(model_7, X, y)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2529,7 +2530,7 @@
         "A = tf.cast(tf.range(-10, 10), tf.float32)\n",
         "A"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2572,7 +2573,7 @@
         "# Visualize our toy tensor\n",
         "plt.plot(A);"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2617,7 +2618,7 @@
         "# Use the sigmoid function on our tensor\n",
         "sigmoid(A)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2662,7 +2663,7 @@
         "# Plot sigmoid modified tensor\n",
         "plt.plot(sigmoid(A));"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2707,7 +2708,7 @@
         "# Pass toy tensor through ReLU function\n",
         "relu(A)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2748,7 +2749,7 @@
         "# Plot ReLU-modified tensor\n",
         "plt.plot(relu(A));"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2789,7 +2790,7 @@
         "# Linear - https://www.tensorflow.org/api_docs/python/tf/keras/activations/linear (returns input non-modified...)\n",
         "tf.keras.activations.linear(A)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2830,7 +2831,7 @@
         "# Does the linear activation change anything?\n",
         "A == tf.keras.activations.linear(A)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2896,7 +2897,7 @@
         "# How many examples are in the whole dataset?\n",
         "len(X)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2929,7 +2930,7 @@
         "# Check the shapes of the data\n",
         "X_train.shape, X_test.shape # 800 examples in the training set, 200 examples in the test set "
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2982,7 +2983,7 @@
         "# Fit the model\n",
         "history = model_8.fit(X_train, y_train, epochs=25)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3057,7 +3058,7 @@
         "print(f\"Model loss on the test set: {loss}\")\n",
         "print(f\"Model accuracy on the test set: {100*accuracy:.2f}%\")"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3111,7 +3112,7 @@
         "plot_decision_boundary(model_8, X=X_test, y=y_test)\n",
         "plt.show()"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3182,7 +3183,7 @@
         "# You can access the information in the history variable using the .history attribute\n",
         "pd.DataFrame(history.history)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3402,7 +3403,7 @@
         "pd.DataFrame(history.history).plot()\n",
         "plt.title(\"Model_8 training curves\")"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3515,7 +3516,7 @@
         "                      epochs=100,\n",
         "                      callbacks=[lr_scheduler])"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3748,7 +3749,7 @@
         "# Checkout the history\n",
         "pd.DataFrame(history.history).plot(figsize=(10,7), xlabel=\"epochs\");"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3797,7 +3798,7 @@
         "plt.ylabel(\"Loss\")\n",
         "plt.title(\"Learning rate vs. loss\");"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3842,7 +3843,7 @@
         "# Example of other typical learning rate values\n",
         "10**0, 10**-1, 10**-2, 10**-3, 1e-4"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3895,7 +3896,7 @@
         "# Fit the model for 20 epochs (5 less than before)\n",
         "history = model_10.fit(X_train, y_train, epochs=20)"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3970,7 +3971,7 @@
         "# Evaluate model on the test dataset\n",
         "model_10.evaluate(X_test, y_test)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4025,7 +4026,7 @@
         "plot_decision_boundary(model_10, X=X_test, y=y_test)\n",
         "plt.show()"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4108,7 +4109,7 @@
         "print(f\"Model loss on test set: {loss}\")\n",
         "print(f\"Model accuracy on test set: {(accuracy*100):.2f}%\")"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4155,7 +4156,7 @@
         "# Create confusion matrix\n",
         "confusion_matrix(y_test, y_preds)"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -4196,7 +4197,7 @@
         "# View the first 10 predictions\n",
         "y_preds[:10]"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4243,7 +4244,7 @@
         "# View the first 10 test labels\n",
         "y_test[:10]"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4291,7 +4292,7 @@
         "# Convert prediction probabilities to binary format and view the first 10\n",
         "tf.round(y_preds)[:10]"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4339,7 +4340,7 @@
         "# Create a confusion matrix\n",
         "confusion_matrix(y_test, tf.round(y_preds))"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4435,7 +4436,7 @@
         "           color=\"white\" if cm[i, j] > threshold else \"black\",\n",
         "           size=15)"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4476,7 +4477,7 @@
         "for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
         "  print(i, j)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4531,7 +4532,7 @@
         "# The data has already been sorted into training and test sets for us\n",
         "(train_data, train_labels), (test_data, test_labels) = fashion_mnist.load_data()"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
