--- a/[Practice_Project]_02_neural_network_classification_in_tensorflow.ipynb
+++ b/[Practice_Project]_02_neural_network_classification_in_tensorflow.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1t2qu6dX54ogCSxHCRdJ3n9-4RcPFh32d",
-      "authorship_tag": "ABX9TyMPbkhetr3+ekoeomLU5Ke8",
+      "authorship_tag": "ABX9TyMLOH5x0ezOl6wiApJ4s77N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1000,7 +1000,328 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EtfJrBtzcMsR"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EtfJrBtzcMsR",
+        "outputId": "2695a4e4-db1a-4c4d-a47b-b40ee0e888f9"
+      },
+      "source": [
+        "# Retraining with ideal learning rate (0.001)\n",
+        "tf.random.set_seed(42)\n",
+        "\n",
+        "model_5 = tf.keras.Sequential([\n",
+        "                               tf.keras.layers.Flatten(input_shape = (28,28)),\n",
+        "                               tf.keras.layers.Dense(4, activation = 'relu'),\n",
+        "                               tf.keras.layers.Dense(4, activation = 'relu'),\n",
+        "                               tf.keras.layers.Dense(10, activation = 'softmax')\n",
+        "])\n",
+        "\n",
+        "\n",
+        "model_5.compile(loss = tf.keras.losses.SparseCategoricalCrossentropy(),\n",
+        "                optimizer = tf.keras.optimizers.Adam(lr = 0.001),\n",
+        "                metrics = ['acc'])\n",
+        "\n",
+        "\n",
+        "history_5 = model_5.fit(norm_X_train, y_train, \n",
+        "                        epochs = 20, \n",
+        "                        validation_data = (norm_X_test, y_test))"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 1.4476 - acc: 0.5004 - val_loss: 0.6937 - val_acc: 0.7617\n",
+            "Epoch 2/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.6479 - acc: 0.7706 - val_loss: 0.6400 - val_acc: 0.7820\n",
+            "Epoch 3/20\n",
+            "1875/1875 [==============================] - 3s 1ms/step - loss: 0.5984 - acc: 0.7902 - val_loss: 0.6247 - val_acc: 0.7783\n",
+            "Epoch 4/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5767 - acc: 0.7986 - val_loss: 0.6078 - val_acc: 0.7881\n",
+            "Epoch 5/20\n",
+            "1875/1875 [==============================] - 3s 1ms/step - loss: 0.5611 - acc: 0.8017 - val_loss: 0.6169 - val_acc: 0.7881\n",
+            "Epoch 6/20\n",
+            "1875/1875 [==============================] - 3s 1ms/step - loss: 0.5562 - acc: 0.8030 - val_loss: 0.5855 - val_acc: 0.7951\n",
+            "Epoch 7/20\n",
+            "1875/1875 [==============================] - 3s 1ms/step - loss: 0.5458 - acc: 0.8076 - val_loss: 0.6097 - val_acc: 0.7836\n",
+            "Epoch 8/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5432 - acc: 0.8086 - val_loss: 0.5787 - val_acc: 0.7971\n",
+            "Epoch 9/20\n",
+            "1875/1875 [==============================] - 3s 1ms/step - loss: 0.5457 - acc: 0.8065 - val_loss: 0.5698 - val_acc: 0.7977\n",
+            "Epoch 10/20\n",
+            "1875/1875 [==============================] - 3s 1ms/step - loss: 0.5289 - acc: 0.8149 - val_loss: 0.5658 - val_acc: 0.8014\n",
+            "Epoch 11/20\n",
+            "1875/1875 [==============================] - 3s 1ms/step - loss: 0.5325 - acc: 0.8129 - val_loss: 0.5714 - val_acc: 0.8002\n",
+            "Epoch 12/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5290 - acc: 0.8119 - val_loss: 0.5626 - val_acc: 0.8027\n",
+            "Epoch 13/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5244 - acc: 0.8154 - val_loss: 0.5619 - val_acc: 0.8041\n",
+            "Epoch 14/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5276 - acc: 0.8126 - val_loss: 0.5718 - val_acc: 0.7991\n",
+            "Epoch 15/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5303 - acc: 0.8129 - val_loss: 0.5706 - val_acc: 0.8024\n",
+            "Epoch 16/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5216 - acc: 0.8164 - val_loss: 0.5731 - val_acc: 0.8023\n",
+            "Epoch 17/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5152 - acc: 0.8178 - val_loss: 0.5594 - val_acc: 0.8030\n",
+            "Epoch 18/20\n",
+            "1875/1875 [==============================] - 3s 1ms/step - loss: 0.5194 - acc: 0.8150 - val_loss: 0.5582 - val_acc: 0.8053\n",
+            "Epoch 19/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5119 - acc: 0.8162 - val_loss: 0.5644 - val_acc: 0.8007\n",
+            "Epoch 20/20\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.5177 - acc: 0.8159 - val_loss: 0.5660 - val_acc: 0.8075\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j6sWFdivd3hp"
+      },
+      "source": [
+        "## Model Evaluation\n",
+        "\n",
+        "To evaluate our multiclass classification model we can:\n",
+        "* Evaluate its performance using other classification metrics (such as a [confusion matrix](https://scikit-learn.org/stable/auto_examples/model_selection/plot_confusion_matrix.html#sphx-glr-auto-examples-model-selection-plot-confusion-matrix-py) or [classification report](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.classification_report.html)).\n",
+        "* Assess some of its predictions (through visualizations).\n",
+        "* Improve its accuracy (by training it for longer or changing the architecture).\n",
+        "* Save and export it for use in an application.\n",
+        "\n",
+        "\n",
+        "> Remember to make predictions on same kind of data as what the model was trained on eg. If your model was trained on normalized data make predictions on normalized data else you might get some unexpected results.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9WYAaSoIejmA"
+      },
+      "source": [
+        "# Note: The following confusion matrix code is a remix of Scikit-Learn's \n",
+        "# plot_confusion_matrix function - https://scikit-learn.org/stable/modules/generated/sklearn.metrics.plot_confusion_matrix.html\n",
+        "# and Made with ML's introductory notebook - https://github.com/madewithml/basics/blob/master/notebooks/09_Multilayer_Perceptrons/09_TF_Multilayer_Perceptrons.ipynb\n",
+        "import itertools\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "\n",
+        "# Our function needs a different name to sklearn's plot_confusion_matrix\n",
+        "def make_confusion_matrix(y_true, y_pred, classes=None, figsize=(10, 10), text_size=15): \n",
+        "  \"\"\"Makes a labelled confusion matrix comparing predictions and ground truth labels.\n",
+        "\n",
+        "  If classes is passed, confusion matrix will be labelled, if not, integer class values\n",
+        "  will be used.\n",
+        "\n",
+        "  Args:\n",
+        "    y_true: Array of truth labels (must be same shape as y_pred).\n",
+        "    y_pred: Array of predicted labels (must be same shape as y_true).\n",
+        "    classes: Array of class labels (e.g. string form). If `None`, integer labels are used.\n",
+        "    figsize: Size of output figure (default=(10, 10)).\n",
+        "    text_size: Size of output figure text (default=15).\n",
+        "  \n",
+        "  Returns:\n",
+        "    A labelled confusion matrix plot comparing y_true and y_pred.\n",
+        "\n",
+        "  Example usage:\n",
+        "    make_confusion_matrix(y_true=test_labels, # ground truth test labels\n",
+        "                          y_pred=y_preds, # predicted labels\n",
+        "                          classes=class_names, # array of class label names\n",
+        "                          figsize=(15, 15),\n",
+        "                          text_size=10)\n",
+        "  \"\"\"  \n",
+        "  # Create the confustion matrix\n",
+        "  cm = confusion_matrix(y_true, y_pred)\n",
+        "  cm_norm = cm.astype(\"float\") / cm.sum(axis=1)[:, np.newaxis] # normalize it\n",
+        "  n_classes = cm.shape[0] # find the number of classes we're dealing with\n",
+        "\n",
+        "  # Plot the figure and make it pretty\n",
+        "  fig, ax = plt.subplots(figsize=figsize)\n",
+        "  cax = ax.matshow(cm, cmap=plt.cm.Blues) # colors will represent how 'correct' a class is, darker == better\n",
+        "  fig.colorbar(cax)\n",
+        "\n",
+        "  # Are there a list of classes?\n",
+        "  if classes:\n",
+        "    labels = classes\n",
+        "  else:\n",
+        "    labels = np.arange(cm.shape[0])\n",
+        "  \n",
+        "  # Label the axes\n",
+        "  ax.set(title=\"Confusion Matrix\",\n",
+        "         xlabel=\"Predicted label\",\n",
+        "         ylabel=\"True label\",\n",
+        "         xticks=np.arange(n_classes), # create enough axis slots for each class\n",
+        "         yticks=np.arange(n_classes), \n",
+        "         xticklabels=labels, # axes will labeled with class names (if they exist) or ints\n",
+        "         yticklabels=labels)\n",
+        "  \n",
+        "  # Make x-axis labels appear on bottom\n",
+        "  ax.xaxis.set_label_position(\"bottom\")\n",
+        "  ax.xaxis.tick_bottom()\n",
+        "\n",
+        "  # Set the threshold for different colors\n",
+        "  threshold = (cm.max() + cm.min()) / 2.\n",
+        "\n",
+        "  # Plot the text on each cell\n",
+        "  for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+        "    plt.text(j, i, f\"{cm[i, j]} ({cm_norm[i, j]*100:.1f}%)\",\n",
+        "             horizontalalignment=\"center\",\n",
+        "             color=\"white\" if cm[i, j] > threshold else \"black\",\n",
+        "             size=text_size)"
+      ],
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "50vZrsXxflEt",
+        "outputId": "4324bb97-02fe-48df-8859-6717a3e7e98a"
+      },
+      "source": [
+        "class_to_label.values()"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_values(['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat', 'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot'])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4UN_wLWgkGkf",
+        "outputId": "c4b23dc3-f291-4988-cdeb-e8b44ffbbcd9"
+      },
+      "source": [
+        "y_probs = model_5.predict(norm_X_test)\n",
+        "y_probs[:5], y_probs[0], tf.argmax(y_probs[0]), class_to_label[tf.argmax(y_probs[0]).numpy()]"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([[8.5630336e-11, 3.5361509e-13, 2.6633865e-05, 4.6356046e-08,\n",
+              "         5.0950021e-05, 9.6119225e-02, 8.1778381e-08, 9.1868617e-02,\n",
+              "         4.0605213e-03, 8.0787390e-01],\n",
+              "        [3.4278683e-06, 1.2899412e-16, 9.5989138e-01, 2.0516255e-07,\n",
+              "         1.5329245e-02, 2.4532243e-13, 2.4142915e-02, 1.1383623e-28,\n",
+              "         6.3271803e-04, 4.4789552e-08],\n",
+              "        [6.1063176e-05, 9.9657673e-01, 4.3867061e-08, 3.3405994e-03,\n",
+              "         1.3249499e-05, 1.4383491e-21, 8.2790693e-06, 7.3237471e-18,\n",
+              "         5.4811817e-08, 4.9225428e-14],\n",
+              "        [7.5031145e-05, 9.9053687e-01, 4.2528288e-07, 9.2231687e-03,\n",
+              "         1.3623090e-04, 1.8276231e-18, 2.6808115e-05, 4.8124743e-14,\n",
+              "         1.4521548e-06, 2.2211462e-11],\n",
+              "        [7.2190031e-02, 1.5495797e-06, 2.5566885e-01, 1.0363121e-02,\n",
+              "         4.3541368e-02, 1.1069260e-13, 6.1693019e-01, 6.7543135e-23,\n",
+              "         1.3049162e-03, 1.2140360e-09]], dtype=float32),\n",
+              " array([8.5630336e-11, 3.5361509e-13, 2.6633865e-05, 4.6356046e-08,\n",
+              "        5.0950021e-05, 9.6119225e-02, 8.1778381e-08, 9.1868617e-02,\n",
+              "        4.0605213e-03, 8.0787390e-01], dtype=float32),\n",
+              " <tf.Tensor: shape=(), dtype=int64, numpy=9>,\n",
+              " 'Ankle boot')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mqDQr1O-kRqe",
+        "outputId": "c37e293c-ec27-4a0b-912e-0b3c66ea6ee9"
+      },
+      "source": [
+        "y_preds = tf.argmax(y_probs, axis = 1)\n",
+        "y_preds[:10]"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(10,), dtype=int64, numpy=array([9, 2, 1, 1, 6, 1, 4, 6, 5, 7])>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3Im1xkhblG3n"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 185
+        },
+        "id": "-1jBzN2de18O",
+        "outputId": "062d07d1-c432-415d-c752-25ccab07a63e"
+      },
+      "source": [
+        "import seaborn as sns\n",
+        "sns.heatmap(conf_mat)"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-57-d9f448358989>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheatmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconf_mat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'conf_mat' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mIKMDzPxlCBy"
       },
       "source": [
         ""
